XIVY-6789 Fix end task redirect not working in IE

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -12,6 +12,7 @@
   <h:outputScript name="js/nanoscroller.js" library="serenity-layout" />
   <h:outputScript name="js/layout.js" library="serenity-layout" />
   <h:outputScript name="js/ripple.js" library="serenity-layout" />
+  <h:outputScript name="resources/js/polyfill.js" />
   <h:outputStylesheet name="css/nanoscroller.css" library="serenity-layout" />
   <h:outputStylesheet name="css/ripple.css" library="serenity-layout" />
   <h:outputStylesheet name="css/layout-ivy-designer.css" library="serenity-layout" />
