XIVY-6921 Dont open starts by default if more than 1 project

--- a/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
@@ -12,7 +12,8 @@
       </p:inputText>
     </p:outputPanel>
   </f:facet>
-  <p:accordionPanel var="pmv" value="#{processesIvyDevWfBean.PMVs}" id="projectStarts" activeIndex="0" multiple="true">
+  <p:accordionPanel var="pmv" value="#{processesIvyDevWfBean.PMVs}" id="projectStarts"
+   activeIndex="#{processesIvyDevWfBean.startsDataModel.activeIndex}" multiple="true">
     <p:tab id="project" titleStyleClass="straight-text-icon">
       <f:facet name="title">
         <h:outputText id="pmvState" styleClass="si si-#{pmv.stateIcon}" />
