--- a/dev-workflow-ui/webContent/view/taskDetails.xhtml
+++ b/dev-workflow-ui/webContent/view/taskDetails.xhtml
@@ -43,6 +43,35 @@
 
         </p:panelGrid>
       </h:form>
+
+      <p:dialog header="Delegate task" id="delegateTaskDialog" widgetVar="delegateTaskModal" modal="true" height="150" width="400">
+        <h:form id="delegateTaskForm">
+          <h:outputText value="Delegate the task to a specified user or group"/>
+          <h:panelGroup id="delegateElements" layout="block">
+            <p:selectOneRadio value="#{tasksDetailsIvyDevWfBean.showUsers}" layout="responsive"
+              columns="2" styleClass="margin-top-10">
+              <f:selectItem itemLabel="User" itemValue="true"/>
+              <f:selectItem itemLabel="Role" itemValue="false"/>
+              <p:ajax update="delegateElements" event="valueChange"/>
+            </p:selectOneRadio>
+            <p:selectOneMenu styleClass="margin-top-10 width-100" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
+              rendered="#{tasksDetailsIvyDevWfBean.showUsers}" id="selectUserMenu" immediate="true">
+              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allUsers}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
+            </p:selectOneMenu>
+            <p:selectOneMenu styleClass="margin-top-10 width-100" value="#{tasksDetailsIvyDevWfBean.delegateMember}"
+              rendered="#{!tasksDetailsIvyDevWfBean.showUsers}" id="selectRoleMenu" immediate="true">
+              <f:selectItems value="#{tasksDetailsIvyDevWfBean.allRoles}" var="member" itemLabel="#{member.displayName}" itemValue="#{member.memberName}"/>
+            </p:selectOneMenu>
+          </h:panelGroup>
+          <h:panelGroup layout="block" styleClass="dialog-button-container">
+            <p:commandLink value="Cancel" styleClass="dialog-cancel-button" onclick="PF('delegateTaskModal').hide();"/>
+            <p:commandButton id="delegateProceedButton" value="Assign task"
+              actionListener="#{tasksDetailsIvyDevWfBean.delegateTask}" icon="si si-move-to-bottom"
+              update="form" onsuccess="PF('delegateTaskModal').hide();"/>
+          </h:panelGroup>
+        </h:form>
+      </p:dialog>
+
     </ui:define>
   </ui:composition>
 </h:body>
