--- a/dev-workflow-ui/webContent/resources/workflow-layout/horizontal-container.css
+++ b/dev-workflow-ui/webContent/resources/workflow-layout/horizontal-container.css
@@ -1,23 +1,25 @@
-@media (min-width: 1025px) {
-    .layout-topbar-menu-wrapper,
-    .container {
-        max-width: 1170px;
-        margin: 0 auto;
-    }
-    .container .topbar-logo {
-        margin-right: 0;
-    }
+@media ( min-width : 1025px) {
+  .layout-topbar-menu-wrapper, .container {
+    max-width: 1170px;
+    margin: 0 auto;
+  }
+  .container .topbar-logo {
+    margin-right: 0;
+  }
 }
-
-@media (min-width: 1200px) {
-    .layout-wrapper .layout-main .layout-content.container {
-        padding-right: 0;
-        padding-left: 0;
-    }
+@media ( min-width : 1200px) {
+  .layout-wrapper .layout-main .layout-content.container {
+    padding-right: 0;
+    padding-left: 0;
+  }
 }
-
-@media (max-width: 609px) {
-    .layout-wrapper.layout-menu-horizontal .layout-breadcrumb {
-        padding-top: 152px;
-    }
+@media ( max-width : 650px) {
+  .layout-wrapper .layout-sidebar .layout-menu>li>a {
+    padding: 10px;
+  }
+}
+@media ( max-width : 540px) {
+  .layout-wrapper .layout-sidebar .layout-menu>li>a>.menuitem-text {
+    display: none;
+  }
 }
