XIVY-7264 Brand dev-wf-ui
- Adjust some styles to use theme colors
- Remove no longer used images

--- a/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -3,7 +3,8 @@
   xmlns:pm="http://primefaces.org/serenity-ivy">
   <div class="layout-sidebar">
     <div class="sidebar-logo">
-      <a href="/"> <img src="#{resource['images/axonivy-logo-2021-rgb-neg.svg']}" alt="Axon Ivy" />
+      <a href="/">
+        <h:graphicImage name="logo_white" library="ivy-branding" alt="Logo" />
       </a>
     </div>
     <div class="nano container has-scrollbar">
