XIVY-7264 Rename colors.css to custom.css

--- a/dev-workflow-ui/webContent/includes/template/template.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/template.xhtml
@@ -34,7 +34,7 @@
     </div>
   </div>
   <h:outputStylesheet name="resources/css/workflow-ui.css" />
-  <h:outputStylesheet name="colors.css" library="ivy-branding" />
+  <h:outputStylesheet name="custom.css" library="ivy-branding" />
 </h:body>
 
 </html>
