--- a/dev-workflow-ui/webContent/view/login.xhtml
+++ b/dev-workflow-ui/webContent/view/login.xhtml
@@ -59,7 +59,7 @@
 
   <h:outputStylesheet name="css/layout-ivy.css" library="serenity-layout" />
   <h:outputStylesheet name="css/cockpit.css" library="serenity-layout" />
-  <h:outputStylesheet name="colors.css" library="ivy-branding" />
+  <h:outputStylesheet name="custom.css" library="ivy-branding" />
 </h:body>
 
 </html>
