--- a/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/startsPanel.xhtml
@@ -26,19 +26,7 @@
           <b><h:outputText value="Case Maps" /></b>
         </h:panelGroup>
         <p:repeat value="#{pmv.caseMapStarts}" var="casemapStart">
-          <p:panel id="startElementCaseMap" styleClass="start-element" rendered="#{pmv.active}">
-            <p:commandLink actionListener="#{casemapStart.execute}" styleClass="flex-space start-link width-100">
-              <span class="straight-text-icon">
-                <i class="si si-controls-play margin-right-5"></i>
-                <span>#{casemapStart.displayName}</span>
-              </span>
-              <span>#{casemapStart.description}</span>
-            </p:commandLink>
-            <p:link id="openStartFullscreenBtn" href="#{casemapStart.link}" styleClass="margin-right-10">
-              <i class="si si-expand-6"/>
-            </p:link>
-            <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page" position="left"/>
-          </p:panel>
+          <jc:startsPanelElement pmv="#{pmv}" start="#{casemapStart}"/>
         </p:repeat>
 
         <h:panelGroup id="processesTitle" styleClass="margin-top-10" layout="block" rendered="#{!empty pmv.categories}">
@@ -52,19 +40,7 @@
           </p:outputPanel>
 
           <p:repeat value="#{category.starts}" var="start">
-            <p:panel id="startElementProcess" styleClass="start-element" rendered="#{pmv.active}">
-              <p:commandLink action="#{start.execute}" styleClass="flex-space start-link width-100">
-                <span class="straight-text-icon">
-                  <i id="startableIcon" class="#{start.icon} margin-right-5"/>
-                  <span class="margin-right-10">#{start.displayName}</span>
-                </span>
-                <span>#{start.description}</span>
-              </p:commandLink>
-              <p:link id="openStartFullscreenBtn" href="#{start.link}" styleClass="margin-right-10" rendered="#{start.embedInFrame}">
-                <i class="si si-expand-6"/>
-              </p:link>
-              <p:tooltip for="openStartFullscreenBtn" value="Open start on a fullscreen page" position="left" rendered="#{start.embedInFrame}"/>
-            </p:panel>
+            <jc:startsPanelElement pmv="#{pmv}" start="#{start}"/>
           </p:repeat>
         </p:repeat>
 
