XIVY-7264 Rename logo_white to logo_light

--- a/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/sidebar.xhtml
@@ -4,7 +4,7 @@
   <div class="layout-sidebar">
     <div class="sidebar-logo">
       <a href="/">
-        <h:graphicImage name="logo_white" library="ivy-branding" alt="Logo" />
+        <h:graphicImage name="logo_light" library="ivy-branding" alt="Logo" />
       </a>
     </div>
     <div class="nano container has-scrollbar">
