--- a/dev-workflow-ui/webContent/includes/template/topbar.xhtml
+++ b/dev-workflow-ui/webContent/includes/template/topbar.xhtml
@@ -4,7 +4,7 @@
   <div class="layout-topbar" style="padding-right: 24px;">
     <div class="container">
       <a class="topbar-logo" href="#{sidebarBean.appContextPath}">
-        <h:graphicImage name="logo_white" library="ivy-branding" alt="Logo" />
+        <h:graphicImage name="logo_light" library="ivy-branding" alt="Logo" />
       </a>
     </div>
     <div class="layout-topbar-menu-wrapper">
